tests/snapshots/test_rust__stack.snap
---
source: tests/test_rust.rs
info:
  program: log2src
  args:
    - "-d"
    - examples/stack.rs
    - "-l"
    - tests/resources/rust/stack.log
    - "-f"
    - "\\[\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}Z \\w+ \\w+\\]\\s+(?<body>.*)"
    - "-s"
    - "1"
  env:
    APPDATA: /var/folders/j9/5x_yddgj607g1zf16sytlf5h0000gp/T/.tmptQdPjv
    COLS: "1000"
    HOME: /var/folders/j9/5x_yddgj607g1zf16sytlf5h0000gp/T/.tmptQdPjv
    LOCALAPPDATA: /var/folders/j9/5x_yddgj607g1zf16sytlf5h0000gp/T/.tmptQdPjv
    USERPROFILE: /var/folders/j9/5x_yddgj607g1zf16sytlf5h0000gp/T/.tmptQdPjv
    XDG_CONFIG_HOME: /var/folders/j9/5x_yddgj607g1zf16sytlf5h0000gp/T/.tmptQdPjv
---
success: true
exit_code: 0
----- stdout -----
{"logRef":{},"srcRef":{"sourcePath":"{example_dir}/stack.rs","language":"Rust","lineNumber":15,"endLineNumber":15,"column":11,"name":"b","qualifiedName":"b","blockId":139,"text":"\"Hello from b\"","quality":10,"pattern":"(?s)^Hello from b$","args":[],"vars":[]},"variables":[]}

----- stderr -----
